Fix problem with text and background contrast

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 
 :root {
   --darker-italian-white-color: hsl(72, 20%, 92%);
-  --italian-green-color: hsl(150, 100%, 27%);
+  --italian-green-color: hsl(150, 100%, 26%);
   --italian-red-color: hsl(357, 72%, 47%);
   --italian-white-color: hsl(72, 20%, 95%);
 }
